--- a/Account Service/src/main/resources/application.properties
+++ b/Account Service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=Account_Service
 server.port=322
+server.error.include-message=always
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=ninja
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=false
+
