implemented chagePassword and validation

--- a/Account Service/src/main/resources/application.properties
+++ b/Account Service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.username=ninja
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.trace=false
-
+spring.jpa.properties.javax.persistence.validation.mode=ddl
